<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1">

    <item
        android:icon="@drawable/drawermarket"
        android:id="@+id/navmarket"
        android:fontFamily="@font/poppins_light"
        android:title="@string/market"/>

    <item
        android:icon="@drawable/fav"
        android:fontFamily="@font/poppins_light"
        android:id="@+id/navfavourite"
        android:title="@string/favourite1"/>

        <item
            android:icon="@drawable/orderbag"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/navoders"
            android:title="@string/orders"/>

        <item
            android:icon="@drawable/drawerportfolio"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/navportfolio"
            android:title="@string/portfolio"/>

    </group>

    <group
        android:id="@+id/group2">

    <item
        android:icon="@drawable/termsandconditions"
        android:fontFamily="@font/poppins_light"
        android:id="@+id/navtnc"
        android:title="@string/terms_and_conditions"/>

        <item
            android:icon="@drawable/feedback"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/navfeedback"
            android:title="@string/feedback"/>

    </group>

    <group
        android:id="@+id/group3">

    <item
        android:icon="@drawable/contact"
        android:fontFamily="@font/poppins_light"
        android:id="@+id/navcontactus"
        android:title="@string/contact_us"/>

    <item
        android:icon="@drawable/share"
        android:fontFamily="@font/poppins_light"
        android:id="@+id/navShare"
        android:title="@string/share"/>

        <item
            android:icon="@drawable/drawerlogout"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/navlogout"
            android:title="@string/logout"/>


    </group>


</menu>

