<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingHorizontal="15dp"
    android:paddingVertical="30dp"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_light_font"
        android:text="@string/welcome_to"
        android:textColor="@color/desc_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_font"
        android:text="@string/tradingpro"
        android:textColor="@color/primary_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/tvAppname"
        android:src="@drawable/yellow_logo_trans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppname"
        tools:layout_editor_absoluteY="30dp" />

    <!--    Signup Line-->

    <RelativeLayout
        android:id="@+id/realtiveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="200dp"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Username-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:id="@+id/textInputLayoutEmailOrPhnLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/login_mail_or_phn"
            app:boxBackgroundColor="@color/edText"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edBorder"
            app:cursorColor="@color/edBorder"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/exclamation"
            app:helperText="@string/required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/desc_text"
            app:hintTextColor="@color/edBorder"
            app:startIconDrawable="@drawable/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEdEmailOrPhnLog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutEmailOrPhnLog"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/edText"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edBorder"
            app:cursorColor="@color/edBorder"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/exclamation"
            app:helperText="@string/required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/desc_text"
            app:hintTextColor="@color/edBorder"
            app:startIconDrawable="@drawable/padlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEdPasswordLog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayoutPasswordLog"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light_font"
            android:text="@string/checkbox_desc"
            android:textColor="@color/desc_text" />

        <!--    btnLogin-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/chkRemember"
            android:layout_marginTop="25dp"
            android:height="50dp"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textColor="@color/secondary_text"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <!--    Divider-->
        <RelativeLayout
            android:id="@+id/relativeOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="30dp">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerOR2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/tvOr"
                android:background="@color/desc_text" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerOR1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toStartOf="@id/tvOr"
                android:background="@color/desc_text" />


            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_light_font"
                android:paddingHorizontal="20dp"
                android:text="@string/or" />

        </RelativeLayout>

        <!--    Google Logo-->
        <ImageView
            android:id="@+id/imgGoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/relativeOR"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/google_logo" />

        <!--    last divider-->
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgGoogle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/desc_text" />


        <LinearLayout
            android:id="@+id/linearSignupLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider2"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light_font"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/desc_text" />

            <TextView
                android:id="@+id/btnsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_up"
                android:textColor="@color/yellow" />
        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>