<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:fitsSystemWindows="true"
    tools:context=".Activity.HomeActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_items"
        app:dividerInsetStart="60dp"
        app:itemIconPadding="25dp"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line1"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:textColor="#979191"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/by_tradingpro"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:textColor="@color/primary_text"/>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/buttondrawertoggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/menu"
                android:src="@drawable/drawermenu"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:text="@string/Home"
                android:textColor="@color/primary_text"
                android:textSize="17sp" />

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="15dp"
                app:contentPadding="5dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="10dp"
                android:backgroundTint="@color/black"
                android:layout_alignParentBottom="true"
                >

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    >

                    <!--            home-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        app:cardCornerRadius="50dp"
                        android:background="@color/white"
                        android:layout_margin="5dp"
                        >

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:src="@drawable/market"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>

                    <!--            search-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        app:cardCornerRadius="50dp"
                        android:background="@color/white"
                        android:layout_margin="5dp"
                        >

                        <ImageView
                            android:id="@+id/img2"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:src="@drawable/watchlist"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>

                    <!--            bag1-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        app:cardCornerRadius="50dp"
                        android:background="@color/white"
                        android:layout_margin="5dp"
                        >

                        <ImageView
                            android:id="@+id/img3"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:src="@drawable/search_"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>

                    <!--            bag2-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card4"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        app:cardCornerRadius="50dp"
                        android:background="@color/white"
                        android:layout_margin="5dp"
                        >

                        <ImageView
                            android:id="@+id/img4"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:src="@drawable/order"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>

                    <!--            bag3-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card5"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        app:cardCornerRadius="50dp"
                        android:background="@color/white"
                        android:layout_margin="5dp"
                        >

                        <ImageView
                            android:id="@+id/img5"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:src="@drawable/portfolio"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>




                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
